# sherlock_board_game

./: .gitignore  README.md  Readme.md  exceptions.py  exceptions_handler.py  main.py  pyproject.toml
config/: settings.py
game/: models.py  room.py
routes/: main.py  room.py
static/: app.js  enter.html  index.html  styles.css
